fix: increase z-index of circle

--- a/src/index.less
+++ b/src/index.less
@@ -216,12 +216,6 @@
     pointer-events: none;
   }
 
-  .topiclinks,
-  .linkcontroller {
-    * {
-      z-index: 100;
-    }
-  }
   #input-box {
     position: absolute;
     top: 0;
@@ -271,7 +265,7 @@
     border-radius: 100%;
     background: #757575;
     border: 2px solid #ffffff;
-    z-index: 10;
+    z-index: 50;
 
     cursor: pointer;
   }
